--- a/css/styles.css
+++ b/css/styles.css
@@ -306,7 +306,7 @@ h4 {
 .sectionTitleInner {
     color: #f15b21;
 }
-a:link {
+a {
     text-decoration: none;
 }
 .container {
@@ -322,16 +322,19 @@ a:link {
 }
 .headerLogoOuter > h1 {
     margin: 0;
-    font-weight: 100;
-    letter-spacing: 1.2px;
+    font-size: 1.5rem;
 }
 .headerLogoInner {
     text-transform: capitalize;
-    color: #f15b21
+    font-weight: 100;
+    letter-spacing: 1.2px;
+    color: #f15b21;
 }
 .slogan {
     color: #fff;
     font-size: 0.875rem;
+    margin-bottom: 1em;
+    display: block;
 }
 
 .menuToggle {
@@ -344,8 +347,11 @@ a:link {
     font-size: 2em;
     white-space: nowrap;
     overflow: hidden;
+    cursor: pointer;
 }
-
+.menuToggle:focus {
+    outline-color: #f15b21;
+}
 .navDropdown {
     display: none;
     position: absolute;
@@ -357,7 +363,22 @@ a:link {
     display: block;
 }
 
+.navList {
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+    background-color: rgba(0,0,0,.7);
+    color: #fff;
+}
 
+.navList > li > a {
+    display: block;
+    padding: 1em;
+    font-size: .875rem;
+    color: #f15b21;
+    text-transform: uppercase;
+    font-family: Helvetica, Arial, sans-serif;
+}
 
 
 
@@ -368,28 +389,47 @@ a:link {
 
 /* ====
 ===== Small devices */
-@media all and (min-width: 580px) {
+@media all and (min-width: 35em) {
     .container {
-        max-width: 540px;
+        max-width: 33em;
     } 
 } /* END small devices */
 
 
 /* ====
 ===== medium devices */
-@media all and (min-width: 768px) {
+@media all and (min-width: 48em) {
     .container {
-        max-width: 720px;
+        max-width: 46em;
     } 
+    .pageNav {
+        display: flex;
+        align-items: center;
+    }
+    .headerLogoOuter > h1 {
+        font-size: 1.75rem;
+    }
+    .menuToggle {
+        display: none;
+    }
+    .navDropdown {
+        display: block;
+        position: static;
+        margin-left: auto;
+    }
+    .navList {
+        
+        display: flex;
+    }
 } /* END medium devices */
 
 
 
 /* ====
 ===== large devices */
-@media all and (min-width: 992px) {
+@media all and (min-width: 62em) {
     .container {
-        max-width: 960px;
+        max-width: 60em;
     } 
 } /* END large devices */
 
@@ -397,8 +437,11 @@ a:link {
 
 /* ====
 ===== extra large devices */
-@media all and (min-width: 1240px) {
+@media all and (min-width: 78em) {
     .container {
-        max-width: 1180px;
-    } 
+        max-width: 74em;
+    }
+    .headerLogoOuter > h1 {
+        font-size: 2rem;
+    }
 } /* END extra large devices */
