--- a/css/styles.css
+++ b/css/styles.css
@@ -284,6 +284,7 @@
 }
 html {
     background-color: #fff;
+    height: 100%;
 }
 body {
     margin: 0;
@@ -293,6 +294,7 @@ body {
     font-weight: 400;
     font-size: 100%;
     color: #000;
+    height: 100%;
 }
 h2,
 h3,
@@ -313,13 +315,35 @@ a {
     margin: 0 auto;
 } 
 
+
+/* ====
+====== banner */
+.banner {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://via.placeholder.com/600");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+/* .bannerText {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+} */
+
+
 /* ====
 ===== Header and Navigation */
 .pageHeader {
     background-color: #000;
-    padding: .4em 1em;
+    padding: .7em 1em .3em;
     position: relative;
 }
+
 .headerLogoOuter > h1 {
     margin: 0;
     font-size: 1.5rem;
@@ -339,7 +363,7 @@ a {
 
 .menuToggle {
     position: absolute;
-    top: .5em;
+    top: .7em;
     right: .4em;
     border: 0;
     background-color: transparent;
@@ -354,9 +378,6 @@ a {
 }
 .navDropdown {
     display: none;
-    position: absolute;
-    right: 0;
-    left: 0;
     margin: 0;
 }
 #mainMenu.isOpen .navDropdown {
@@ -373,17 +394,12 @@ a {
 
 .navList > li > a {
     display: block;
-    padding: 1em;
+    padding: 1em 1em 1em 0;
     font-size: .875rem;
     color: #f15b21;
     text-transform: uppercase;
     font-family: Helvetica, Arial, sans-serif;
 }
-
-
-
-
-
 
 
 
@@ -431,6 +447,9 @@ a {
     .container {
         max-width: 60em;
     } 
+    .navList > li > a {
+        padding-right: 3em;
+    }
 } /* END large devices */
 
 
