Services on banner transfered only on medium and large devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -334,23 +334,34 @@ img {
 /* ====
 ====== banner */
 .banner {
-    background-image:                       url("../img/bannerBg.jpg");
+    background-image: url("../img/bannerBg.jpg");
     height: 100%;
     background-position: center 70px;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
 }
-/* .bannerText {
-    text-align: center;
+.bannerText {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-} */
-
-
+}
+.bannerText .sectionTitle {
+    font-size: 3rem;
+    text-align: left;
+}
+.bannerText a {
+    background: none repeat scroll 0 0 rgba(30, 30, 30, .3);
+    color: #fff;
+    display: inline-block;
+    font-size: 11px;
+    line-height: 15px;
+    padding: 10px;
+    text-align: center;
+    width: 70%;
+}
 
 /* ====
 ===== Header and Navigation */
@@ -424,121 +435,8 @@ img {
     position: relative;
 }
 .services {
-    height: 447px;
-    width: 447px;
-    margin-left: -223.5px;
-    text-align: center;
-    z-index: 100;
-    position: absolute;
-    top: -223px;
-    left: 50%;
+    display: none;
 }
-.services::before {
-    content: "";
-    background: url('../img/servicesBg.jpg') no-repeat scroll 0 0 / 100% 100% rgba(0, 0, 0, 0);
-    height: 100%;
-    position: absolute;
-    left: 50%;
-    width: 100%;
-    top: -92px;
-    z-index: -1;
-    transform: rotate(45deg);
-    transform-origin: 0 0 0;    
-}
-.services::after {
-    content: "";
-    background: none repeat scroll 0 0 black;
-    background-color: #ff4c06;
-    border: 30px solid #e6e6e6;
-    height: 100%;
-    width: 100%;
-    opacity: .9;
-    z-index: -1;
-    position: absolute;
-    left: 0;
-    top: 0;
-    transform: rotate(45deg)
-}
-.servicesImg {
-    background: url('../img/border.png') no-repeat scroll center bottom transparent;
-    float: left;
-    margin-top: -150px;
-    padding-bottom: 1px;
-    width: 100%;
-}
-.servicesImg img {
-    margin: 0 auto;
-}
-.servicesText {
-    float: left;
-    margin-top: 25px;
-    width: 100%;
-}
-.servicesText .sectionTitle {
-    color: #fff;
-    float: left;
-    font-weight: 600;
-    letter-spacing: 2.5px;
-    overflow: hidden;
-    padding: 0 80px 20px;
-    text-overflow: ellipsis;
-    text-transform: uppercase;
-    white-space: nowrap;
-    width: 100%;
-    margin: 0;
-}
-.servicesText p {
-    color: #f2f1f1;
-    float: left;
-    padding: 0 85px 20px;
-    width: 100%;
-    letter-spacing: 1.2px;
-}
-.servicesText a {
-    background: none repeat scroll 0 0 rgba(30, 30, 30, .3);
-    color: #fff;
-    display: inline-block;
-    font-size: 11px;
-    line-height: 15px;
-    padding: 10px;
-    text-align: center;
-    width: 70%;
-}
-.whiteBorder {
-    background: none repeat scroll 0 0 #fff;
-    width: 65px;
-    height: 322px;
-    position: absolute;
-    bottom: -75px;
-    left: 100px;
-    transform: rotate(-45deg);
-}
-.whiteBorder::before {
-    content: "";
-    background: url('../img/serviceBg.png') repeat scroll 0 0 rgba(0, 0, 0, 0);
-    height: 90px;
-    width: 92px;
-    position: absolute;
-    left: -45px;
-    top: -45px;
-    transform: rotate(45deg);
-}
-.whiteBorder.right {
-    left: auto;
-    right: 100px;
-    top: 200px;
-    transform: rotate(45deg);
-}
-.whiteBorder.right::before {
-    width: 65px;
-    height: 65px;
-    left: auto;
-    right: -1px;
-    top: -64px;
-    transform: rotate(90deg);
-}
-
-
 /* ====
 ===== Our Experts and Trainers */
 
@@ -892,6 +790,130 @@ textarea:focus {
     .navList {
         display: flex;
     }
+
+    .bannerText {
+        display: none;
+    }
+
+    /* ====
+    ===== Our Sevices only for medium
+    ===== and large devices */
+    .services {
+        display: block;
+        height: 447px;
+        width: 447px;
+        margin-left: -223.5px;
+        text-align: center;
+        z-index: 100;
+        position: absolute;
+        top: -223px;
+        left: 50%;
+    }
+    .services::before {
+        content: "";
+        background: url('../img/servicesBg.jpg') no-repeat scroll 0 0 / 100% 100% rgba(0, 0, 0, 0);
+        height: 100%;
+        position: absolute;
+        left: 50%;
+        width: 100%;
+        top: -92px;
+        z-index: -1;
+        transform: rotate(45deg);
+        transform-origin: 0 0 0;    
+    }
+    .services::after {
+        content: "";
+        background: none repeat scroll 0 0 black;
+        background-color: #ff4c06;
+        border: 30px solid #e6e6e6;
+        height: 100%;
+        width: 100%;
+        opacity: .9;
+        z-index: -1;
+        position: absolute;
+        left: 0;
+        top: 0;
+        transform: rotate(45deg)
+    }
+    .servicesImg {
+        background: url('../img/border.png') no-repeat scroll center bottom transparent;
+        float: left;
+        margin-top: -150px;
+        padding-bottom: 1px;
+        width: 100%;
+    }
+    .servicesImg img {
+        margin: 0 auto;
+    }
+    .servicesText {
+        float: left;
+        margin-top: 25px;
+        width: 100%;
+    }
+    .servicesText .sectionTitle {
+        color: #fff;
+        float: left;
+        font-weight: 600;
+        letter-spacing: 2.5px;
+        overflow: hidden;
+        padding: 0 80px 20px;
+        text-overflow: ellipsis;
+        text-transform: uppercase;
+        white-space: nowrap;
+        width: 100%;
+        margin: 0;
+    }
+    .servicesText p {
+        color: #f2f1f1;
+        float: left;
+        padding: 0 85px 20px;
+        width: 100%;
+        letter-spacing: 1.2px;
+    }
+    .servicesText a {
+        background: none repeat scroll 0 0 rgba(30, 30, 30, .3);
+        color: #fff;
+        display: inline-block;
+        font-size: 11px;
+        line-height: 15px;
+        padding: 10px;
+        text-align: center;
+        width: 70%;
+    }
+    .whiteBorder {
+        background: none repeat scroll 0 0 #fff;
+        width: 65px;
+        height: 322px;
+        position: absolute;
+        bottom: -75px;
+        left: 100px;
+        transform: rotate(-45deg);
+    }
+    .whiteBorder::before {
+        content: "";
+        background: url('../img/serviceBg.png') repeat scroll 0 0 rgba(0, 0, 0, 0);
+        height: 90px;
+        width: 92px;
+        position: absolute;
+        left: -45px;
+        top: -45px;
+        transform: rotate(45deg);
+    }
+    .whiteBorder.right {
+        left: auto;
+        right: 100px;
+        top: 200px;
+        transform: rotate(45deg);
+    }
+    .whiteBorder.right::before {
+        width: 65px;
+        height: 65px;
+        left: auto;
+        right: -1px;
+        top: -64px;
+        transform: rotate(90deg);
+    }
+    
 
     .weProvideFlex {
         display: flex;
