--- a/css/styles.css
+++ b/css/styles.css
@@ -266,8 +266,8 @@
 /* ====
 ==== colors for site 
     
-    ORANGE #ff4c06 rgb(241, 91, 33)
-
+    ORANGE          #ff4c06 rgb(241, 91, 33)
+    TEXT GRAY       #666
 ==== /*
 
 
@@ -334,7 +334,8 @@ img {
 /* ====
 ====== banner */
 .banner {
-    background-image: url("../img/bannerBg.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), 
+    rgba(0, 0, 0, 0.5)), url("../img/bannerBg.jpg");
     height: 100%;
     background-position: center 70px;
     background-repeat: no-repeat;
@@ -343,26 +344,31 @@ img {
 }
 .bannerText {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 60%;
+    left: 40%;
     transform: translate(-50%, -50%);
     color: white;
 }
 .bannerText .sectionTitle {
     font-size: 3rem;
     text-align: left;
+    margin: 0;
+}
+.bannerText p {
+    padding: 1em 0 2em;
 }
 .bannerText a {
-    background: none repeat scroll 0 0 rgba(30, 30, 30, .3);
+    background: none repeat scroll 0 0 rgba(0, 0, 0, .4);
     color: #fff;
     display: inline-block;
-    font-size: 11px;
     line-height: 15px;
-    padding: 10px;
+    padding: 1.5em 1em;
     text-align: center;
-    width: 70%;
+    width: 50%;
 }
-
+.bannerText a:hover {
+    background-color: rgba(0, 0, 0, .7);
+}
 /* ====
 ===== Header and Navigation */
 .pageHeader {
@@ -436,6 +442,45 @@ img {
 }
 .services {
     display: none;
+}
+/* ====
+===== Our Sevices Icons */
+.servicesIcons {
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    margin: 3em auto;
+}
+.serviceIconOuter {
+    margin: 0 auto;
+}
+.serviceIcon {
+    display: block;
+    text-align: center;
+    width: 150px;
+    height: 150px;
+    border: 5px solid #ff4c06;
+    color: #666;
+    transform: rotate(45deg);
+    margin: 3em 2em;
+}
+.serviceIcon:hover {
+    background-color: #ff4c06;
+    color: #fff;
+}
+.serviceIconContent {
+    width: 150px;
+    height: 150px;
+    transform: rotate(-45deg);
+}
+.serviceIconContent .fas {
+    font-size: 3.5em;
+    margin: 20px 0;
+}
+.serviceIconContent p {
+    margin: 0;
 }
 /* ====
 ===== Our Experts and Trainers */
@@ -799,7 +844,7 @@ textarea:focus {
     ===== Our Sevices only for medium
     ===== and large devices */
     .services {
-        display: block;
+        display: block; /* coz of display none in mobile view*/
         height: 447px;
         width: 447px;
         margin-left: -223.5px;
@@ -808,6 +853,7 @@ textarea:focus {
         position: absolute;
         top: -223px;
         left: 50%;
+        z-index: 10;
     }
     .services::before {
         content: "";
@@ -913,6 +959,13 @@ textarea:focus {
         top: -64px;
         transform: rotate(90deg);
     }
+    .servicesIcons {
+        margin-top: 3.5em;
+        padding: 0 5em;
+    }
+    .serviceIconOuter {
+        z-index: 20;
+    }
     
 
     .weProvideFlex {
@@ -963,7 +1016,9 @@ textarea:focus {
     .weProvideService {
         flex: 1;
     }
-    
+    .servicesIcons {
+        padding: 0;
+    }
     .copy br {
         display: none;
     }
