--- a/css/styles.css
+++ b/css/styles.css
@@ -330,6 +330,29 @@ img {
     padding: 0 1em;
 } 
 
+.btn {
+    display: block;
+    width: 100%;
+    padding: 1em;
+    background-color: #ff4c06;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    cursor: pointer;
+    text-align: center;
+}
+.btn.btnOutline {
+    background: transparent;
+    border: 2px solid #ff4c06;
+    width: auto;
+    display: inline-block;
+    padding: .5em 1.5em;
+}
+.btn.btnOutline:hover {
+    background-color: rgba(0, 0, 0, .7);
+}
 
 /* ====
 ====== banner */
@@ -357,18 +380,8 @@ img {
 .bannerText p {
     padding: 1em 0 2em;
 }
-.bannerText a {
-    background: none repeat scroll 0 0 rgba(0, 0, 0, .4);
-    color: #fff;
-    display: inline-block;
-    line-height: 15px;
-    padding: 1.5em 1em;
-    text-align: center;
-    width: 50%;
-}
-.bannerText a:hover {
-    background-color: rgba(0, 0, 0, .7);
-}
+
+
 /* ====
 ===== Header and Navigation */
 .pageHeader {
@@ -519,12 +532,6 @@ figure {
     text-align: center;
     margin: 0;
     padding: 2em 2em 1em;
-   /* position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); */
 }
 .tileContent {
     text-align: center;
@@ -571,10 +578,17 @@ figure {
 /* ====
 ===== Our Story */
 
-
-
-
-
+.ourStory {
+    background-color: #013A6B;
+}
+.story {
+    color: #fff;
+    padding: 2em 3em;
+    line-height: 1.6;
+}
+.story .sectionTitle {
+    text-align: left;
+}
 
 /* ====
 ===== Services we Provide */
@@ -718,18 +732,7 @@ textarea:focus {
     text-shadow: 2px 4px 3px rgba(0, 0, 0, .3);
     opacity: 1; /* Firefox */
 }
-.btn {
-    display: block;
-    width: 100%;
-    padding: 1em;
-    background-color: #ff4c06;
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: 1.2px;
-    cursor: pointer;
-}
+
 /* ====
 ===== Gallery */
 .gallery {
@@ -989,7 +992,6 @@ textarea:focus {
         z-index: 20;
     }
     
-
     .weProvideFlex {
         display: flex;
         flex-wrap: wrap;
@@ -998,7 +1000,32 @@ textarea:focus {
         padding: .5em 1em;
         flex: 1 0 50%;
     }
+    /* ====
+    ===== Our Story only for medium
+    ===== and large devices */
+    .ourStory {
+        position: relative;
+        background: url('../img/ourStoryBg.jpg') no-repeat;
+        background-position: right center;
+        background-size: cover;
+        background-attachment: fixed;
 
+    }
+    .ourStory::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(120deg,
+        #000 55%, rgba(0, 0, 0, .1) 45%);
+    }
+    .story {
+        padding-right: 25em;
+        position: relative;
+        z-index: 10;
+    }
     .clientsReviewContainer {
         display: grid;
         grid-template-columns: 3fr 2fr;
@@ -1032,6 +1059,9 @@ textarea:focus {
         padding-right: 3em;
     }
 
+    .story {
+        padding-right: 35em;
+    }
     .weProvideFlex {
         flex-wrap: nowrap;
     }
